implement order as guest

--- a/02_UIL/client/src/app/signup/signup.component.html
+++ b/02_UIL/client/src/app/signup/signup.component.html
@@ -1,54 +1,141 @@
-<form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="card  text-center mb-3 form-group bg-light shadow">
-    <!-- Form Title -->
-    <div class="card-header ">
-        <h1 class="font-weight-light text-uppercase"><b>SIGN UP TO BONAPP'</b></h1>
+<form
+  [formGroup]="signupForm"
+  (ngSubmit)="onSubmit()"
+  class="card text-center mb-3 form-group bg-light shadow"
+>
+  <!-- Form Title -->
+  <div class="card-header">
+    <h1 class="font-weight-light text-uppercase"><b>SIGN UP TO BONAPP'</b></h1>
+  </div>
+  <div class="card-body">
+    <!-- Full Name input-->
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"
+          ><i class="fa fa-user-circle fa-2x"></i></span
+        ><br />
+        <input
+          formControlName="name"
+          type="text"
+          class="ml-4 form-control rounded-pill form-control-md"
+          placeholder="Full Name"
+        />
+      </div>
     </div>
-    <div class="card-body">
 
-        <!-- Full Name input-->
-        <div class="form-group">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-user-circle fa-2x"></i></span><br>
-                <input formControlName="name" type="text" class=" ml-4 form-control rounded-pill form-control-md" placeholder="Full Name"  >
-            </div>
-        </div>
-
-        <!-- Password input-->
-        <div class="form-group">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-key fa-2x"></i></span><br>
-                <input formControlName="password" type="password" class=" ml-4 form-control rounded-pill form-control-md" placeholder="Password">
-            </div>
-        </div>
-
-        <!-- Confirm Password input-->
-        <div class="form-group">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-key fa-2x"></i></span><br>
-                <input formControlName="confirmPassword" type="password" #checkpassword  class=" ml-4 form-control rounded-pill form-control-md" placeholder="Confirm Your Password" (keyup)="checkPassword(checkpassword.value)" >
-            </div>
-            <label *ngIf="checkPassword(checkpassword.value) && signupForm.get('confirmPassword').touched" class="text-danger">
-                Passwords do not match
-            </label>
-        </div>
-
-        <!-- Email input-->
-        <div class="form-group">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-envelope fa-2x"></i></span><br>
-                <input formControlName="email" class=" ml-4 form-control rounded-pill form-control-md" placeholder="Email Address" >
-            </div>
-            <label *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched" class="text-danger">The value is not a valid email address</label>
-        </div>
-
-        <!-- Success message -->
-        <div *ngIf="registrationSuccess" class="alert alert-success text-center" role="alert">Sign up successfully</div>
-
-        <!-- Failed message -->
-        <div *ngIf="registrationSuccess === false" class="alert alert-danger text-center" role="alert">Sign up failed, please verify yours fields</div>
-
-        <!-- Submit Button -->
-        <button [disabled]="!signupForm.valid" type="submit" class="btn mt-5 rounded-pill btn-lg btn-custom btn-block text-uppercase">Sign up</button>
-        <p class="mt-3 font-weight-normal">Do you have an account? <a routerLink="/login"><strong>Login Now</strong></a></p>
+    <!-- Email input-->
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"
+          ><i class="fa fa-envelope fa-2x"></i></span
+        ><br />
+        <input
+          formControlName="email"
+          class="ml-4 form-control rounded-pill form-control-md"
+          placeholder="Email Address"
+        />
+      </div>
+      <label
+        *ngIf="
+          !signupForm.get('email').valid && signupForm.get('email').touched
+        "
+        class="text-danger"
+        >The value is not a valid email address</label
+      >
     </div>
+
+    <!-- Phone input-->
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-phone fa-2x"></i></span
+        ><br />
+        <input
+          formControlName="phone"
+          class="ml-4 form-control rounded-pill form-control-md"
+          placeholder="Phone Number"
+        />
+      </div>
+      <label
+        *ngIf="
+          !signupForm.get('phone').valid && signupForm.get('phone').touched
+        "
+        class="text-danger"
+        >The value is not a valid email address</label
+      >
+    </div>
+
+    <!-- Password input-->
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-key fa-2x"></i></span
+        ><br />
+        <input
+          formControlName="password"
+          type="password"
+          class="ml-4 form-control rounded-pill form-control-md"
+          placeholder="Password"
+        />
+      </div>
+    </div>
+
+    <!-- Confirm Password input-->
+    <div class="form-group">
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-key fa-2x"></i></span
+        ><br />
+        <input
+          formControlName="confirmPassword"
+          type="password"
+          #checkpassword
+          class="ml-4 form-control rounded-pill form-control-md"
+          placeholder="Confirm Your Password"
+          (keyup)="checkPassword(checkpassword.value)"
+        />
+      </div>
+      <label
+        *ngIf="
+          checkPassword(checkpassword.value) &&
+          signupForm.get('confirmPassword').touched
+        "
+        class="text-danger"
+      >
+        Passwords do not match
+      </label>
+    </div>
+
+    <!-- Success message -->
+    <div
+      *ngIf="registrationSuccess"
+      class="alert alert-success text-center"
+      role="alert"
+    >
+      Sign up successfully
+    </div>
+
+    <!-- Failed message -->
+    <div
+      *ngIf="registrationSuccess === false"
+      class="alert alert-danger text-center"
+      role="alert"
+    >
+      Sign up failed, please verify yours fields
+    </div>
+
+    <!-- Submit Button -->
+    <button
+      [disabled]="
+        !signupForm.valid ||
+        signupForm.get('password').value !=
+          signupForm.get('confirmPassword').value
+      "
+      type="submit"
+      class="btn mt-5 rounded-pill btn-lg btn-custom btn-block text-uppercase"
+    >
+      Sign up
+    </button>
+    <p class="mt-3 font-weight-normal">
+      Do you have an account?
+      <a routerLink="/login"><strong>Login Now</strong></a>
+    </p>
+  </div>
 </form>
