Add notification to users by id (order confirmed, user updated)

--- a/02_UIL/client/src/app/controladmin/usermanager/usermanager.component.html
+++ b/02_UIL/client/src/app/controladmin/usermanager/usermanager.component.html
@@ -4,8 +4,8 @@
             <div class="card-body">
                 <h4 class="card-title">Users List</h4>
                 <div class="table-responsive">
-                    <table class="table" *ngIf="!isLoading">
-                        <thead>
+                    <table class="table table-hover" *ngIf="!isLoading">
+                        <thead class="thead-light">
                             <tr class="text-center">
                                 <th> Full Name </th>
                                 <th> Email </th>
