--- a/02_UIL/client/src/app/activities/orderdetails/orderdetails.component.html
+++ b/02_UIL/client/src/app/activities/orderdetails/orderdetails.component.html
@@ -1,18 +1,30 @@
 <div class="card">
-  <h4 class="card-header text-center">
-    <i class="fa fa-shopping-cart fa-2x"></i> Order Details
-  </h4>
-  <div class="card-body">
-    <h6 class="card-subtitle mb-2 text-muted">
-      {{ currentOrder.date }} : {{ currentOrder.time }}
-    </h6>
-    <ul>
-      <li class="input-group-addon" *ngFor="let item of currentOrder.items">
-        Item : {{ item.name }} x{{ item.quantity }} :
-        {{ item.price * item.quantity }}₪
-      </li>
-    </ul>
-    <hr />
-    <h5>Total : {{ currentOrder.totalPrice }}₪</h5>
-  </div>
+    <h4 class="card-header text-center">
+        <i class="fa fa-shopping-cart fa-2x"></i> Order Details
+    </h4>
+    <div class="card-body">
+        <h6 class="card-subtitle mb-2 text-muted">
+            {{ currentOrder.date }} : {{ currentOrder.time }}
+        </h6>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr class="text-center">
+                        <th> Item </th>
+                        <th> Quantity </th>
+                        <th> Price </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="text-center" *ngFor="let item of currentOrder.items">
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.quantity }}</td>
+                        <td>{{ item.price * item.quantity }}₪</td>
+                    </tr>
+                </tbody>
+            </table>
+            <hr />
+            <h5>Total : {{ currentOrder.totalPrice }}₪</h5>
+        </div>
+    </div>
 </div>
