--- a/02_UIL/client/src/app/activities/userdetails/userdetails.component.html
+++ b/02_UIL/client/src/app/activities/userdetails/userdetails.component.html
@@ -1,9 +1,23 @@
 <div class="card">
     <h4 class="card-header text-center"><i class="fa fa-user-circle fa-2x"></i> User Details</h4>
     <div class="card-body">
-        <div *ngIf="currentUser">
-            <p class="input-group-addon">Name : {{ currentUser.name }}</p>
-            <p class="input-group-addon">Email : {{ currentUser.email }}</p>
+        <div *ngIf="currentUser" class="table-responsive">
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr class="text-center">
+                        <th> Name </th>
+                        <th> Phone </th>
+                        <th> Address </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="text-center">
+                        <td>{{ currentUser.name }}</td>
+                        <td>{{ currentUser.phone }}</td>
+                        <td>XXXXXXXX</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
