bug active order fixed

--- a/02_UIL/client/src/app/activities/userdetails/userdetails.component.html
+++ b/02_UIL/client/src/app/activities/userdetails/userdetails.component.html
@@ -12,9 +12,9 @@
                 </thead>
                 <tbody>
                     <tr class="text-center">
-                        <td>{{ currentUser.name }}</td>
-                        <td>{{ currentUser.phone }}</td>
-                        <td>XXXXXXXX</td>
+                        <td>{{ currentUser['name'] }}</td>
+                        <td>{{ currentUser['phone'] }}</td>
+                        <td>{{ currentUser['address'] }}</td>
                     </tr>
                 </tbody>
             </table>
