--- a/02_UIL/client/src/app/order/order.component.html
+++ b/02_UIL/client/src/app/order/order.component.html
@@ -1,11 +1,14 @@
 <div class="row">
   <div class="col-md-8">
-    <div class="row">
-      <div class="col-md-6" @fade *ngFor="let item of menu">
-        <app-menu-item
-          [item]="item"
-          (click)="onAddItemToCart(item)"
-        ></app-menu-item>
+    <div *ngFor="let category of menu">
+      <h3  class="text-center">{{ category[0] }}</h3>
+      <div class="row">
+        <div class="col-md-6" @fade *ngFor="let item of category[1]">
+          <app-menu-item
+            [item]="item"
+            (click)="onAddItemToCart(item)"
+          ></app-menu-item>
+        </div>
       </div>
     </div>
   </div>
