--- a/02_UIL/client/src/app/activities/orderdetails/orderdetails.component.html
+++ b/02_UIL/client/src/app/activities/orderdetails/orderdetails.component.html
@@ -24,7 +24,8 @@
                 </tbody>
             </table>
             <hr />
-            <h5>Total : {{ currentOrder.totalPrice }}₪</h5>
+            <h5 class="pull-left">Total : {{ currentOrder.totalPrice }}₪</h5>
+            <h5 *ngIf='currentOrder.notes'><span class="badge badge-pill badge-warning pull-right" (click)="showNote(currentOrder.notes)"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Had notes - click to show</span></h5>
         </div>
     </div>
 </div>
